<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/beijing"
    android:background="@drawable/phonebg"
    tools:context=".Activity.EmilReActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/toolbar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:singleLine="true"
            android:src="@drawable/back_white"
            android:text="@string/title_activity_login"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/activity_Emil"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/qingshuruyouxiang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_rectangle"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/qingshuruyouxianghao"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/colorWhite" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_yanzhengma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_rectangle"
            android:drawableLeft="@drawable/msg_code_white"
            android:drawablePadding="10dp"
            android:hint="@string/yanzhengma"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="110dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/colorWhite" />

        <Button
            android:id="@+id/fasong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/btn_y"
            android:text="@string/fasongyanzhengma" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_yaoqingma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_rectangle"
        android:drawablePadding="10dp"
        android:hint="@string/yaoqingma"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/shezhimima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_rectangle"
        android:drawableLeft="@drawable/login_lock"
        android:drawablePadding="10dp"
        android:hint="@string/shezhimima"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/colorWhite" />

    <Button
        android:id="@+id/zhuce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/btn_y"
        android:text="@string/zhuce"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yiyouzhanghao"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/fanhui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fanhuidenglu"
            android:textSize="13sp"
            android:textColor="@color/btn_y"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhucejitongyi"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yonghuxieyi"
            android:textSize="12sp"
            android:textColor="@color/btn_y"
            />
    </LinearLayout>
</LinearLayout>