<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VideoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/toolbar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:singleLine="true"
            android:src="@drawable/back_white"
            android:text="@string/title_activity_login"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/video"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/lyou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_color"
        >
        <!--your view-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yinpinshangchuan"
            android:textSize="15sp"
            android:textColor="@color/gray_33"
            android:padding="10dp"
            />
        <com.github.fastshape.MyLinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            app:solidColor="@color/gray_f2"
            app:radius="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yuyin_second"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anzhukaishiluyin"
                />
        </com.github.fastshape.MyLinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipinshangchuan"
            android:textSize="15sp"
            android:textColor="@color/gray_33"
            android:padding="10dp"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/select_photo"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <com.github.fastshape.MyTextView
        android:id="@+id/shangchuan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/shangchuan"
        android:textColor="@color/gray_33"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:solidColor="@color/yellow"
        app:radius="20dp"
        android:gravity="center"
        android:textSize="14sp"
        />
</LinearLayout>